--- a/libraries.gradle
+++ b/libraries.gradle
@@ -6,7 +6,7 @@ slf4jVersion = '1.6.1'
 junitVersion = '4.10'
 h2Version = '1.2.145'
 bytemanVersion = '2.1.2'
-infinispanVersion = '5.2.0.Beta3'
+infinispanVersion = '6.0.2.Final'
 jnpVersion = '5.0.6.CR1'
 
 libraries = [
